--- a/nicepage.css
+++ b/nicepage.css
@@ -31546,68 +31546,26 @@ a.u-link.u-text-hover-grey-90:hover {
 /*end-variables sitestylecss*/
 .u-header {
   background-image: none;
-  min-height: 76px;
 }
 
-.u-header .u-image-1 {
-  margin: 2px auto 0 calc(((100% - 1140px) / 2) + -68px);
+.u-header .u-sheet-1 {
+  min-height: 10px;
 }
 
-.u-header .u-logo-image-1 {
-  max-width: 64px;
-  max-height: 64px;
-}
 
-.u-header .u-menu-1 {
-  margin: -64px 0 38px auto;
-}
 
-.u-header .u-nav-1 {
-  font-size: 1rem;
-  letter-spacing: 0px;
-}
 
-.u-header .u-nav-2 {
-  font-size: 1.25rem;
-}
-@media (max-width: 1199px) {
-  .u-header .u-image-1 {
-    margin-left: calc(((100% - 940px) / 2));
-    width: 64px;
-    height: 32px;
-  }
-
-  .u-header .u-menu-1 {
-    width: auto;
-  }
-}
-@media (max-width: 991px) {
-  .u-header .u-image-1 {
-    margin-left: calc(((100% - 720px) / 2));
-  }
-}
-@media (max-width: 767px) {
-  .u-header .u-image-1 {
-    width: auto;
-    margin-left: calc(((100% - 540px) / 2));
-  }
-}
-@media (max-width: 575px) {
-  .u-header .u-image-1 {
-    margin-left: calc(((100% - 340px) / 2));
-  }
-}
 .u-footer {
   background-image: none;
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 115px;
+  min-height: 90px;
 }
 
 .u-footer .u-text-1 {
   width: 417px;
-  margin: 25px auto;
+  margin: 23px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
